# ToDo_case

./: CMakeLists.txt  main.cpp
src/: TaskDialog.cpp  TaskDialog.h  api.cpp  api.h  authorization.cpp  authorization.h  mainwindow.cpp  mainwindow.h  models.h
